Legger til Unleash-double

--- a/mocks/pom.xml
+++ b/mocks/pom.xml
@@ -31,6 +31,7 @@
         <module>personfeed-mock</module>
         <module>sigrun-mock</module>
         <module>tps-mock</module>
+        <module>unleash-double</module>
     </modules>
 
     <dependencies>
