--- a/server/pom.xml
+++ b/server/pom.xml
@@ -41,6 +41,10 @@
         </dependency>
         <dependency>
             <groupId>no.nav.foreldrepenger.vtp</groupId>
+            <artifactId>unleash-double</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>no.nav.foreldrepenger.vtp</groupId>
             <artifactId>norg2-mock</artifactId>
         </dependency>
         <dependency>
