--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
             </dependency>
             <dependency>
                 <groupId>no.nav.foreldrepenger.vtp</groupId>
+                <artifactId>unleash-double</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>no.nav.foreldrepenger.vtp</groupId>
                 <artifactId>inntekt-mock</artifactId>
                 <version>${project.version}</version>
             </dependency>
