Oppretter ny module for dtoene mellom VTP og AT.

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>model</module>
         <module>mocks</module>
         <module>server</module>
+        <module>autotest</module>
     </modules>
 
     <properties>
