Lagt til SAF rest tjeneste og fjernet avhengigeter i core avhengighet i pom fordi parent har allerede denne avhengigeten.

--- a/mocks/saf-mock/pom.xml
+++ b/mocks/saf-mock/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>mocks</artifactId>
@@ -8,24 +9,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dokumentproduksjon-mock</artifactId>
-    <name>VTP ::dokumentproduksjon-mock</name>
+    <artifactId>saf-mock</artifactId>
+    <name>VTP ::saf-mock</name>
     <packaging>jar</packaging>
 
     <dependencies>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-annotations</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-http-spi</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>no.nav.tjenester.fim</groupId>
-            <artifactId>nav-fim-dokumentproduksjon-v2-tjenestespesifikasjon</artifactId>
-            <classifier>jaxws</classifier>
-        </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
@@ -35,5 +23,4 @@
             <artifactId>swagger-jaxrs</artifactId>
         </dependency>
     </dependencies>
-
 </project>
