--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,12 @@
                 <version>${project.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>no.nav.foreldrepenger.vtp</groupId>
+                <artifactId>saf-mock</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
             <!-- CXF - for å kunne stubbe WS-trust -->
             <dependency>
                 <groupId>org.apache.cxf</groupId>
