Lagt til SAF rest tjeneste og fjernet avhengigeter i core avhengighet i pom fordi parent har allerede denne avhengigeten.

--- a/mocks/pom.xml
+++ b/mocks/pom.xml
@@ -21,6 +21,7 @@
         <module>infotrygdfeed-mock</module>
         <module>inntekt-mock</module>
         <module>joark-mock</module>
+        <module>saf-mock</module>
         <module>kafka-embedded-mock</module>
         <module>kodeverk-mock</module>
         <module>ldap-mock</module>
