--- a/server/pom.xml
+++ b/server/pom.xml
@@ -87,6 +87,10 @@
             <groupId>no.nav.foreldrepenger.vtp</groupId>
             <artifactId>dummy-mock</artifactId>
         </dependency>
+        <dependency>
+            <groupId>no.nav.foreldrepenger.vtp</groupId>
+            <artifactId>saf-mock</artifactId>
+        </dependency>
 
 
         <!-- NAV biblioteker -->
