--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <cxf.version>3.3.5</cxf.version>
         <tjenestespesifikasjoner.version>1.2020.01.20-15.44-063ae9f84815</tjenestespesifikasjoner.version>
         <swagger.version>1.6.0</swagger.version>
-
+        <graphql-java.version>12.0</graphql-java.version>
     </properties>
 
     <dependencyManagement>
@@ -535,6 +535,12 @@
                 <groupId>javax</groupId>
                 <artifactId>javaee-api</artifactId>
                 <version>7.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.graphql-java</groupId>
+                <artifactId>graphql-java</artifactId>
+                <version>${graphql-java.version}</version>
             </dependency>
 
             <dependency>
