--- a/mocks/pom.xml
+++ b/mocks/pom.xml
@@ -33,6 +33,7 @@
         <module>oppdrag-mock</module>
         <module>oppgave-mock</module>
         <module>organisasjon-mock</module>
+        <module>tjenestepensjon-mock</module>
         <module>personfeed-mock</module>
         <module>sigrun-mock</module>
         <module>tps-mock</module>
