Fjerner duplisering og flytter versjon til DependencyManager i hoved pom.

--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,12 @@
                 <version>${project.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>javax.ws.rs</groupId>
+                <artifactId>javax.ws.rs-api</artifactId>
+                <version>2.1.1</version>
+            </dependency>
+
             <!-- CXF - for å kunne stubbe WS-trust -->
             <dependency>
                 <groupId>org.apache.cxf</groupId>
@@ -255,6 +261,7 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+
             <dependency>
                 <groupId>org.apache.cxf.services.sts</groupId>
                 <artifactId>cxf-services-sts-core</artifactId>
@@ -302,10 +309,6 @@
                 <version>2.3.1</version>
             </dependency>
             <dependency>
-                <groupId>no.nav.foreldrepenger.vtp</groupId>
-                <artifactId>core</artifactId>
-            </dependency>
-            <dependency>
                 <groupId>org.apache.zookeeper</groupId>
                 <artifactId>zookeeper</artifactId>
                 <version>3.5.5</version>
@@ -326,6 +329,16 @@
                 <groupId>no.nav.tjenestespesifikasjoner</groupId>
                 <artifactId>nav-behandleInngaaendeJournal-v1-tjenestespesifikasjon</artifactId>
                 <version>1.2019.12.18-12.22-ce897c4eb2c1</version>
+            </dependency>
+            <dependency>
+                <groupId>no.nav.tjenester</groupId>
+                <artifactId>medlemskapsunntak-api-v1</artifactId>
+                <version>1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>no.nav.tjenester</groupId>
+                <artifactId>aordningen-inntektsinformasjon-v1</artifactId>
+                <version>1.4</version>
             </dependency>
             <dependency>
                 <groupId>no.nav.tjenester</groupId>
@@ -652,6 +665,24 @@
                 <version>1.11.1</version>
             </dependency>
 
+            <dependency>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>1.9.4</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.9</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -684,6 +715,11 @@
                 <plugin>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>3.1.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
