--- a/mocks/oppdrag-mock/pom.xml
+++ b/mocks/oppdrag-mock/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>tilbakekreving-v1-tjenestespesifikasjon</artifactId>
             <classifier>jaxws</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-ws-security</artifactId>
+        </dependency>
     </dependencies>
 
 
